test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/tentative_definition.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[46]:
  extern
  int
  identifier(foo)
  ;
  int
  identifier(foo)
  ;
  int
  identifier(foo)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(5)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  identifier(foo)
  =
  identifier(foo)
  +
  const int(1)
  ;
  return
  identifier(foo)
  ;
  }
  int
  identifier(foo)
  ;
