test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_declarations/redefine_param_as_identifier_with_linkage.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(f)
  (
  int
  identifier(i)
  )
  {
  extern
  int
  identifier(i)
  ;
  return
  identifier(i)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
